add k8s, node_cidr, bastion floating ip
