# pkg/model/tbl_openstack_cluster.go
@@ -7,15 +7,20 @@ import "time"
 
 // OpenstackClusterTable - 클러스터 테이블 정보 (Openstack)
 type OpenstackClusterTable struct {
-	CloudUid      *string        `json:"cloud_uid" db:"cloud_uid"`
-	ClusterUid    *string        `json:"cluster" db:"cluster_uid"`
-	ProjectName   *string        `json:"project_name" db:"project_name"`
-	Name          *string        `json:"name" db:"name"`
-	Version       *int           `json:"version" db:"version"`
-	Desc          *string        `json:"desc" db:"description"`
-	Credential    *string        `json:"credential" db:"credential"`
-	PodCidr       *string        `json:"pod_cidr" db:"pod_cidr"`
-	SvcCidr       *string        `json:"svc_cidr" db:"service_cidr"`
+	CloudUid    *string `json:"cloud_uid" db:"cloud_uid"`
+	ClusterUid  *string `json:"cluster" db:"cluster_uid"`
+	ProjectName *string `json:"project_name" db:"project_name"`
+	Name        *string `json:"name" db:"name"`
+	Desc        *string `json:"desc" db:"description"`
+	Credential  *string `json:"credential" db:"credential"`
+
+	// K8s 정보
+	Version   *int    `json:"version" db:"version"`
+	PodCidr   *string `json:"pod_cidr" db:"pod_cidr"`
+	SvcCidr   *string `json:"svc_cidr" db:"service_cidr"`
+	SvcDomain *string `json:"svc_domain" db:"service_domain"`
+
+	// Openstack 정보
 	OpenstackInfo *OpenstackInfo `json:"openstack_info" db:"openstack_info"`
 
 	// nodes 정보
